syntax = "proto3";

package frontend_service;

import "ddl_service.proto";

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;


message SchemaChangeRequest {
  message GetReplaceTablePlanRequest {
    uint32 database_id = 1;
    string owner = 2;
    ddl_service.SchemaChangeEnvelope schema_change = 3;
  }

  oneof request {
    GetReplaceTablePlanRequest replace_table_plan = 1;
  }

}

message SchemaChangeResponse {
  message GetReplaceTablePlanResponse {
    ddl_service.ReplaceTablePlan table_plan = 1;
  }

  oneof response {
    GetReplaceTablePlanResponse replace_table_plan = 1;
  }

}


// Frontend will start a background worker to
service SchemaChangeService {
  rpc GetNewTableStreamingGraph(SchemaChangeRequest) returns (SchemaChangeResponse);
}
